--- a/src/AspNet.Identity.RavenDB/AspNet.Identity.RavenDB.csproj
+++ b/src/AspNet.Identity.RavenDB/AspNet.Identity.RavenDB.csproj
@@ -55,6 +55,7 @@
     <Compile Include="Stores\RavenRoleStore.cs" />
     <Compile Include="Stores\RavenIdentityStore.cs" />
     <Compile Include="Stores\RavenUserClaimStore.cs" />
+    <Compile Include="Stores\RavenUserLoginStore.cs" />
     <Compile Include="Stores\RavenUserSecretStore.cs" />
     <Compile Include="Utils\Crypto.cs" />
     <Compile Include="Entities\Role.cs" />
