--- a/tests/AspNet.Identity.RavenDB.Tests/AspNet.Identity.RavenDB.Tests.csproj
+++ b/tests/AspNet.Identity.RavenDB.Tests/AspNet.Identity.RavenDB.Tests.csproj
@@ -60,7 +60,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Stores\RavenRoleStoreFacts.cs" />
     <Compile Include="Stores\RavenUserStoreFacts.cs" />
+    <Compile Include="Stores\TestBase.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
