added RavenRoleStore.GetUsersInRoles tests

--- a/tests/AspNet.Identity.RavenDB.Tests/packages.config
+++ b/tests/AspNet.Identity.RavenDB.Tests/packages.config
@@ -5,4 +5,5 @@
   <package id="RavenDB.Database" version="2.0.2380" targetFramework="net45" />
   <package id="RavenDB.Embedded" version="2.0.2380" targetFramework="net45" />
   <package id="xunit" version="1.9.1" targetFramework="net45" />
+  <package id="xunit.extensions" version="1.9.1" targetFramework="net45" />
 </packages>
