--- a/src/Bloggy.Client.Web/Web.Prod.config
+++ b/src/Bloggy.Client.Web/Web.Prod.config
@@ -14,6 +14,11 @@
         xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
     </connectionStrings>
   -->
+  <appSettings>
+    <add key="akismet:enabled" value="false" xdt:Transform="SetAttributes" xdt:Locator="Match(key)" />
+    <add key="akismet:apiKey" value="" xdt:Transform="SetAttributes" xdt:Locator="Match(key)" />
+    <add key="akismet:blog" value="" xdt:Transform="SetAttributes" xdt:Locator="Match(key)" />
+  </appSettings>
   <system.web>
     <compilation xdt:Transform="RemoveAttributes(debug)" />
     <!--
