--- a/src/Bloggy.Client.Web/Web.config
+++ b/src/Bloggy.Client.Web/Web.config
@@ -5,7 +5,6 @@
   -->
 <configuration>
   <configSections>
-    
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <appSettings>
@@ -14,6 +13,9 @@
     <add key="PreserveLoginUrl" value="true" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="akismet:enabled" value="false" />
+    <add key="akismet:apiKey" value="" />
+    <add key="akismet:blog" value="" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
