--- a/src/Bloggy.Client.Web/packages.config
+++ b/src/Bloggy.Client.Web/packages.config
@@ -18,6 +18,9 @@
   <package id="Microsoft.Owin.Security.OAuth" version="1.1.0-beta2" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="4.5.11" targetFramework="net45" />
+  <package id="NLog" version="2.1.0" targetFramework="net45" />
+  <package id="NLog.Config" version="2.1.0" targetFramework="net45" />
+  <package id="NLog.Schema" version="2.1.0" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net45" />
   <package id="RavenDB.Client" version="2.0.2380" targetFramework="net45" />
   <package id="Twitter.Bootstrap.Less" version="2.3.2.1" targetFramework="net45" />
