completed the blogpost comment post logic. fixes #1

--- a/src/Bloggy.Client.Web/Web.config
+++ b/src/Bloggy.Client.Web/Web.config
@@ -13,7 +13,15 @@
     <add key="PreserveLoginUrl" value="true" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <add key="akismet:enabled" value="false" />
+    
+    <add key="ravendb:url" value="http://localhost:8080/" />
+    <add key="ravendb:defaultDatabase" value="Blog" />
+
+    <add key="recaptcha:active" value="false" />
+    <add key="recaptcha:privateKey" value="6LeJ0sASAAAAAMs9p7y2-3HtYkHIC3_IpGkVIXMq" />
+    <add key="recaptcha:publicKey" value="6LdeSd4SAAAAAAFKNJZUcKXYFOiamJmJg7_j2kbi" />
+    
+    <add key="akismet:active" value="false" />
     <add key="akismet:apiKey" value="" />
     <add key="akismet:blog" value="" />
   </appSettings>
@@ -46,7 +54,7 @@
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-5.0.0.0" newVersion="5.0.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.0.0" newVersion="4.0.0.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
