--- a/src/Bloggy.Client.Web/packages.config
+++ b/src/Bloggy.Client.Web/packages.config
@@ -1,31 +1,31 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Autofac" version="3.0.2" targetFramework="net45" />
-  <package id="Autofac.Mvc4" version="3.0.0" targetFramework="net45" />
+  <package id="Autofac" version="3.1.3" targetFramework="net45" />
+  <package id="Autofac.Mvc5" version="3.0.0-rc1" targetFramework="net45" />
   <package id="AutoMapper" version="2.2.1" targetFramework="net45" />
   <package id="FontAwesome" version="3.2.1" targetFramework="net45" />
   <package id="jQuery" version="1.9.1" targetFramework="net45" />
   <package id="jQuery.Validation" version="1.8.1" targetFramework="net45" />
-  <package id="Microsoft.AspNet.Mvc" version="4.0.30506.0" targetFramework="net45" />
-  <package id="Microsoft.AspNet.Razor" version="2.0.30506.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Mvc" version="5.0.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Razor" version="3.0.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.0" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebPages" version="2.0.30506.0" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebPages.Data" version="2.0.20710.0" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebPages.WebData" version="2.0.30506.0" targetFramework="net45" />
-  <package id="Microsoft.jQuery.Unobtrusive.Validation" version="2.0.30506.0" targetFramework="net45" />
-  <package id="Microsoft.Owin" version="1.1.0-beta2" targetFramework="net45" />
-  <package id="Microsoft.Owin.Host.SystemWeb" version="1.1.0-beta2" targetFramework="net45" />
-  <package id="Microsoft.Owin.Security" version="1.1.0-beta2" targetFramework="net45" />
-  <package id="Microsoft.Owin.Security.Forms" version="1.1.0-beta2" targetFramework="net45" />
-  <package id="Microsoft.Owin.Security.OAuth" version="1.1.0-beta2" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebHelpers" version="3.0.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebPages" version="3.0.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebPages.Data" version="3.0.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebPages.WebData" version="3.0.0" targetFramework="net45" />
+  <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.0.0" targetFramework="net45" />
+  <package id="Microsoft.Owin" version="2.0.0" targetFramework="net45" />
+  <package id="Microsoft.Owin.Host.SystemWeb" version="2.0.0" targetFramework="net45" />
+  <package id="Microsoft.Owin.Security" version="2.0.0" targetFramework="net45" />
+  <package id="Microsoft.Owin.Security.Cookies" version="2.0.0" targetFramework="net45" />
+  <package id="Microsoft.Owin.Security.OAuth" version="2.0.0" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
-  <package id="microsoft-web-helpers" version="2.1.20710.2" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="4.5.11" targetFramework="net45" />
   <package id="NLog" version="2.1.0" targetFramework="net45" />
   <package id="NLog.Config" version="2.1.0" targetFramework="net45" />
   <package id="NLog.Schema" version="2.1.0" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net45" />
-  <package id="RavenDB.Client" version="2.0.2380" targetFramework="net45" />
+  <package id="RavenDB.Client" version="2.5.2700" targetFramework="net45" />
   <package id="Twitter.Bootstrap.Less" version="2.3.2.1" targetFramework="net45" />
   <package id="WebGrease" version="1.3.0" targetFramework="net45" />
 </packages>
