--- a/src/Bloggy.Domain/packages.config
+++ b/src/Bloggy.Domain/packages.config
@@ -1,4 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="RavenDB.Client" version="2.0.2380" targetFramework="net45" />
+  <package id="AspNet.Identity.RavenDB" version="1.0.0-pre03" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Identity.Core" version="1.0.0" targetFramework="net45" />
+  <package id="RavenDB.Client" version="2.5.2700" targetFramework="net45" />
 </packages>
