--- a/src/Bloggy.Client.Web/Bloggy.Client.Web.csproj
+++ b/src/Bloggy.Client.Web/Bloggy.Client.Web.csproj
@@ -56,7 +56,7 @@
     </Reference>
     <Reference Include="AspNet.Identity.RavenDB, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\packages\AspNet.Identity.RavenDB.1.0.0-pre03\lib\net45\AspNet.Identity.RavenDB.dll</HintPath>
+      <HintPath>..\..\packages\AspNet.Identity.RavenDB.1.0.0-pre05\lib\net45\AspNet.Identity.RavenDB.dll</HintPath>
     </Reference>
     <Reference Include="Autofac, Version=3.0.0.0, Culture=neutral, PublicKeyToken=17863af14b0044da, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -462,6 +462,7 @@
     <Compile Include="Infrastructure\ActionResults\RssFeedResult.cs" />
     <Compile Include="Infrastructure\Extensions\NumericExtensions.cs" />
     <Compile Include="Infrastructure\Extensions\StringExtensions.cs" />
+    <Compile Include="Infrastructure\Identity\UserManagerRoleExtensions.cs" />
     <Compile Include="Infrastructure\Mapping\IntTypeConverter.cs" />
     <Compile Include="Infrastructure\Mapping\NullIntTypeConverter.cs" />
     <Compile Include="Infrastructure\RavenController.cs" />
@@ -474,9 +475,11 @@
     <Compile Include="Models\BlogPostModelLight.cs" />
     <Compile Include="Models\LanguageModel.cs" />
     <Compile Include="Models\TagModel.cs" />
+    <Compile Include="RequestModels\BaseUserRequestModel.cs" />
     <Compile Include="RequestModels\CommentPostRequestModel.cs" />
     <Compile Include="RequestModels\LoginRequestModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RequestModels\ManagementUserRequestModel.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="StringResources.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -493,7 +496,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\web.config" />
-    <Content Include="packages.config" />
+    <Content Include="packages.config">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Views\Default\Index.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\_ViewStart.cshtml" />
@@ -513,6 +518,7 @@
     <Content Include="Scripts\tinymce\skins\lightgray\fonts\icomoon.ttf" />
     <Content Include="Scripts\tinymce\skins\lightgray\fonts\icomoon.eot" />
     <Content Include="Scripts\tinymce\langs\readme.md" />
+    <Content Include="Views\Account\CreateManagementUser.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
