added sample config files

--- a/.gitignore
+++ b/.gitignore
@@ -110,4 +110,4 @@ UpgradeLog*.XML
 # Custom
 tests/*/[Aa]pp.config
 utils/*/[Aa]pp.config
-appSettings.web.*
+src/Bloggy.Client.Web/Config/appSettings.web.*
