fixed the legacy asp.net membership config issue. Aligned with the current design

--- a/src/Bloggy.Client.Web/Web.config
+++ b/src/Bloggy.Client.Web/Web.config
@@ -28,6 +28,9 @@
     <validation validateIntegratedModeConfiguration="false" />
     <modules>
       <remove name="FormsAuthenticationModule" />
+      <remove name="RoleManagerModule" />
+      <remove name="FormsAuthentication" />
+      <remove name="RoleManager" />
     </modules>
   </system.webServer>
   <entityFramework>
