akismet integration tests now gets the akismet credentials from the environment variables

--- a/.gitignore
+++ b/.gitignore
@@ -108,7 +108,7 @@ Backup*/
 UpgradeLog*.XML
 
 # Custom
+init.me.ps1
 tests/*/[Aa]pp.config
-utils/*/[Aa]pp.config
 src/Bloggy.Client.Web/Config/appSettings.web.*
 PublishProfiles
