--- a/src/Bloggy.Client.Web/Web.config
+++ b/src/Bloggy.Client.Web/Web.config
@@ -7,7 +7,24 @@
   <configSections>
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
-  <appSettings configSource="config\appSettings.web.config" />
+  <appSettings>
+    <add key="webpages:Version" value="3.0.0.0" />
+    <add key="webpages:Enabled" value="false" />
+    <add key="PreserveLoginUrl" value="true" />
+    <add key="ClientValidationEnabled" value="true" />
+    <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+
+    <add key="Bloggy:RavenDb:Url" value="http://localhost:8080/" />
+    <add key="Bloggy:RavenDb:DefaultDatabase" value="Blog" />
+
+    <add key="Bloggy:Recaptcha:Active" value="false" />
+    <add key="Bloggy:Recaptcha:PublicKey" value="" />
+    <add key="Bloggy:Recaptcha:PrivateKey" value="" />
+
+    <add key="Bloggy:Akismet:Enabled" value="false" />
+    <add key="Bloggy:Akismet:ApiKey" value="whatever" />
+    <add key="Bloggy:Akismet:Blog" value="" />
+  </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
