--- a/utils/Bloggy.Client.Web.Migrator/App.config
+++ b/utils/Bloggy.Client.Web.Migrator/App.config
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
   <appSettings>
-    <add key="ravendb:url" value="http://localhost:8080/" />
-    <add key="ravendb:defaultDatabase" value="Blog" />
+    <add key="Bloggy:RavenDb:Url" value="http://localhost:8080/" />
+    <add key="Bloggy:RavenDb:DefaultDatabase" value="Blog" />
   </appSettings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
